adding jwt authorization
