# app/Http/Controllers/Swagger/MainController.php
@@ -12,6 +12,14 @@ use Illuminate\Http\Request;
  * ),
  * @OA\PathItem(
  *     path="/api"
+ * ),
+ *
+ * @OA\Components(
+ *     @OA\SecurityScheme(
+ *         securityScheme="bearerAuth",
+ *         type="http",
+ *         scheme="bearer"
+ *     )
  * )
  */
 class MainController extends Controller
